# parsial

./: README.md  README.rst  pyproject.toml
.github/workflows/: lint-test-cover-docs.yml
docs/: toc.rst
docs/_source/: parsial.rst
src/parsial/: __init__.py  parsial.py
