[project]
name = "parsial"
version = "0.1.0"
description = """\
    Python library that transforms any string parser into a \
    parser that skips lines containing syntax errors.\
    """
license = {text = "MIT"}
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/reity/parsial"

[project.optional-dependencies]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=parsial --cov-report term-missing"
